--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -143,7 +143,7 @@
         "ALLOWED_EMAIL": "nya.onmoseti@gmail.com",
         "DISPATCH_NAMESPACE": "vibesdk-default-namespace",
         "CLOUDFLARE_AI_GATEWAY": "vibesdk-gateway",
-        "CUSTOM_DOMAIN": "fikanova.co.ke/jenga-studio",
+        "CUSTOM_DOMAIN": "jenga-studio.fikanova.co.ke",
         "MAX_SANDBOX_INSTANCES": "10",
         "SANDBOX_INSTANCE_TYPE": "standard"
     },
